--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 - unzip -q ctc.zip
 - pwd
 - echo "Preparing ROS1 requirements"
-- ./prepare_requirements_ros1.log
+- ./prepare_requirements_ros1.sh
 - echo "Building ROS1 dependencies"
 - travis_wait 30 sh -c "./build_ros1_dependencies.sh > build_ros1_dependencies.log 2>&1"
 - echo "Building ROS1"
