--- a/docker/Dockerfile_ros2
+++ b/docker/Dockerfile_ros2
@@ -14,9 +14,10 @@ RUN apt-get update
 RUN apt-get install -y --no-install-recommends libc6-i386
 RUN apt-get install -y --no-install-recommends apt-transport-https
 RUN apt-get install -y --no-install-recommends build-essential cmake git libssl-dev wget zlib1g-dev
-RUN apt-get install -y python-rosdep python-rosinstall-generator python-wstool python-rosinstall build-essential
-RUN apt-get install -y python3-vcstool python3-empy
-RUN apt-get install -y pkg-config
+RUN apt-get install -y --no-install-recommends python-rosdep python-rosinstall-generator python-wstool python-rosinstall build-essential
+RUN apt-get install -y --no-install-recommends python3-vcstool python3-empy
+RUN apt-get install -y --no-install-recommends automake pkg-config libtool
+RUN apt-get install -y --no-install-recommends ccache
 RUN useradd -ms /bin/bash nao
 WORKDIR /home/nao
 USER nao
