--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,7 @@ environment:
 
 before_build:
   - wget -q -O ctc-linux64-atom-2.5.2.74.zip $CTC_URL
+  - unzip ctc-linux64-atom-2.5.2.74.zip
 
 build_script:
   - ./prepare_requirements_ros1.sh
